@@ -1,11 +1,14 @@
 package com.forumviajeros.backend.service.forum;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Isolation;
 import org.springframework.transaction.annotation.Propagation;
@@ -22,18 +25,23 @@ import com.forumviajeros.backend.repository.CategoryRepository;
 import com.forumviajeros.backend.repository.ForumRepository;
 import com.forumviajeros.backend.repository.TagRepository;
 import com.forumviajeros.backend.repository.UserRepository;
+import com.forumviajeros.backend.service.storage.LocalStorageService;
+import com.forumviajeros.backend.service.storage.StorageException;
 import com.forumviajeros.backend.util.HtmlSanitizer;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 @Transactional(readOnly = true)
 public class ForumServiceImpl implements ForumService {
         private final ForumRepository forumRepository;
         private final UserRepository userRepository;
         private final CategoryRepository categoryRepository;
         private final TagRepository tagRepository;
+        private final LocalStorageService localStorageService;
 
         @Override
         @Transactional
@@ -50,7 +58,7 @@ public class ForumServiceImpl implements ForumService {
                 forum.setUser(userRepository.findById(userId)
                                 .orElseThrow(() -> new ResourceNotFoundException("Usuario", "id", userId)));
 
-                forum.setTags(tagRepository.findByNameIn(forumDTO.getTags()));
+        forum.setTags(tagRepository.findByNameIn(sanitizeTagNames(forumDTO.getTags())));
                 forum.setStatus(Forum.ForumStatus.ACTIVE);
                 forum.setCreatedAt(LocalDateTime.now());
                 forum.setUpdatedAt(LocalDateTime.now());
@@ -61,9 +69,11 @@ public class ForumServiceImpl implements ForumService {
 
         @Override
         @Transactional
-        public ForumResponseDTO updateForum(Long id, ForumRequestDTO forumDTO) {
+        public ForumResponseDTO updateForum(Long id, ForumRequestDTO forumDTO, Authentication authentication) {
                 Forum forum = forumRepository.findById(id)
                                 .orElseThrow(() -> new ResourceNotFoundException("Foro", "id", id));
+
+                assertOwnershipOrAdmin(forum, authentication);
 
                 forum.setTitle(HtmlSanitizer.stripAllTags(forumDTO.getTitle()));
                 forum.setDescription(HtmlSanitizer.sanitizeRichText(forumDTO.getDescription()));
@@ -72,7 +82,7 @@ public class ForumServiceImpl implements ForumService {
                                 .orElseThrow(() -> new ResourceNotFoundException("Categoría", "id",
                                                 forumDTO.getCategoryId())));
 
-                forum.setTags(tagRepository.findByNameIn(forumDTO.getTags()));
+                forum.setTags(tagRepository.findByNameIn(sanitizeTagNames(forumDTO.getTags())));
                 forum.setUpdatedAt(LocalDateTime.now());
 
                 Forum updatedForum = forumRepository.save(forum);
@@ -90,7 +100,7 @@ public class ForumServiceImpl implements ForumService {
         public List<ForumResponseDTO> getAllForums() {
                 return forumRepository.findAll().stream()
                                 .map(this::mapToResponseDTO)
-                                .toList();
+                                .collect(Collectors.toList());
         }
 
         @Override
@@ -114,7 +124,7 @@ public class ForumServiceImpl implements ForumService {
 
                 return forumRepository.findByCategory(category).stream()
                                 .map(this::mapToResponseDTO)
-                                .toList();
+                                .collect(Collectors.toList());
         }
 
         @Override
@@ -123,7 +133,7 @@ public class ForumServiceImpl implements ForumService {
 
                 return forumRepository.searchByKeyword(sanitizedKeyword, Pageable.unpaged()).stream()
                                 .map(this::mapToResponseDTO)
-                                .toList();
+                                .collect(Collectors.toList());
         }
 
         @Override
@@ -131,6 +141,7 @@ public class ForumServiceImpl implements ForumService {
         public void delete(Long id, Authentication authentication) {
                 Forum forum = forumRepository.findById(id)
                                 .orElseThrow(() -> new ResourceNotFoundException("Foro", "id", id));
+                assertOwnershipOrAdmin(forum, authentication);
                 forumRepository.delete(forum);
         }
 
@@ -143,18 +154,53 @@ public class ForumServiceImpl implements ForumService {
                                                                 username)))
                                 .stream()
                                 .map(this::mapToResponseDTO)
-                                .toList();
+                                .collect(Collectors.toList());
         }
 
         @Override
         @Transactional
         public ForumResponseDTO updateImage(Long id, MultipartFile file, Authentication authentication) {
+                String username = authentication != null ? authentication.getName() : "unknown";
+                log.info("Usuario {} subiendo imagen al foro con id: {}", username, id);
+
                 Forum forum = forumRepository.findById(id)
                                 .orElseThrow(() -> new ResourceNotFoundException("Foro", "id", id));
 
-                // TODO: implementar subida real con LocalStorageService
-                forum.setUpdatedAt(LocalDateTime.now());
-                return mapToResponseDTO(forumRepository.save(forum));
+                assertOwnershipOrAdmin(forum, authentication);
+
+                // Validar que el archivo no esté vacío
+                if (file == null || file.isEmpty()) {
+                        log.warn("Intento de subir archivo vacío al foro {} por usuario: {}", id, username);
+                        throw new IllegalArgumentException("El archivo no puede estar vacío");
+                }
+
+                try {
+                        // Eliminar imagen anterior si existe
+                        if (forum.getImagePath() != null && !forum.getImagePath().isEmpty()) {
+                                try {
+                                        localStorageService.delete(forum.getImagePath());
+                                        log.debug("Imagen anterior eliminada: {}", forum.getImagePath());
+                                } catch (StorageException e) {
+                                        // Log el error pero continuar con la subida de la nueva imagen
+                                        log.warn("No se pudo eliminar la imagen anterior {}: {}", forum.getImagePath(),
+                                                        e.getMessage());
+                                }
+                        }
+
+                        // Guardar nueva imagen (LocalStorageService valida el tipo de archivo)
+                        String fileName = localStorageService.store(file);
+                        forum.setImagePath(fileName);
+                        forum.setUpdatedAt(LocalDateTime.now());
+
+                        Forum savedForum = forumRepository.save(forum);
+                        log.info("Imagen subida exitosamente al foro {} por usuario: {}. Archivo: {}", id, username,
+                                        fileName);
+                        return mapToResponseDTO(savedForum);
+                } catch (StorageException e) {
+                        log.error("Error al subir imagen al foro {} por usuario {}: {}", id, username, e.getMessage(),
+                                        e);
+                        throw new IllegalArgumentException("Error al subir la imagen: " + e.getMessage(), e);
+                }
         }
 
         @Override
@@ -166,18 +212,62 @@ public class ForumServiceImpl implements ForumService {
                 forumRepository.deleteById(id);
         }
 
+        @Override
+        @Transactional
+        public ForumResponseDTO updateForumStatus(Long id, String status, Authentication authentication) {
+                Forum forum = forumRepository.findById(id)
+                                .orElseThrow(() -> new ResourceNotFoundException("Foro", "id", id));
+
+                // Verificar permisos: moderadores y admins pueden cambiar el estado
+                if (!isAdmin(authentication) && !isModerator(authentication)) {
+                        throw new org.springframework.security.access.AccessDeniedException(
+                                        "No tienes permisos para modificar el estado de este foro");
+                }
+
+                // Validar que el status sea válido
+                Forum.ForumStatus newStatus;
+                try {
+                        newStatus = Forum.ForumStatus.valueOf(status.toUpperCase());
+                } catch (IllegalArgumentException e) {
+                        throw new IllegalArgumentException("Estado inválido: " + status +
+                                        ". Valores permitidos: ACTIVE, INACTIVE, ARCHIVED");
+                }
+
+                // Actualizar el estado
+                forum.setStatus(newStatus);
+                forum.setUpdatedAt(LocalDateTime.now());
+                Forum updatedForum = forumRepository.save(forum);
+                return mapToResponseDTO(updatedForum);
+        }
+
         private ForumResponseDTO mapToResponseDTO(Forum forum) {
                 ForumResponseDTO response = new ForumResponseDTO();
                 response.setId(forum.getId());
                 response.setTitle(forum.getTitle());
                 response.setDescription(forum.getDescription());
                 response.setCategoryId(forum.getCategory().getId());
-                response.setTags(forum.getTags().stream().map(Tag::getName).toList());
+                response.setTags(forum.getTags().stream().map(Tag::getName).collect(Collectors.toList()));
                 response.setStatus(forum.getStatus().name());
                 response.setViewCount(forum.getViewCount());
                 response.setPostCount((long) forum.getPosts().size());
                 response.setCreatedAt(forum.getCreatedAt().toString());
                 response.setUpdatedAt(forum.getUpdatedAt() != null ? forum.getUpdatedAt().toString() : null);
+
+                // Incluir imagen si existe
+                String imagePath = forum.getImagePath();
+                if (imagePath != null && !imagePath.isEmpty()) {
+                        try {
+                                // Obtener la imagen en formato dataURL
+                                String imageDataUrl = localStorageService.getImage(imagePath);
+                                response.setImagePath(imageDataUrl);
+                        } catch (StorageException e) {
+                                // Si hay un error, usar la ruta normal
+                                response.setImagePath(imagePath);
+                        }
+                } else {
+                        response.setImagePath(null);
+                }
+
                 return response;
         }
 
@@ -186,5 +276,45 @@ public class ForumServiceImpl implements ForumService {
                 return userRepository.findByUsername(username)
                                 .orElseThrow(() -> new ResourceNotFoundException("Usuario", "username", username))
                                 .getId();
+        }
+
+        private void assertOwnershipOrAdmin(Forum forum, Authentication authentication) {
+                if (authentication == null) {
+                        throw new org.springframework.security.access.AccessDeniedException("Usuario no autenticado");
+                }
+
+                if (isAdmin(authentication) || isModerator(authentication)) {
+                        return;
+                }
+
+                String username = authentication.getName();
+                if (!forum.getUser().getUsername().equals(username)) {
+                        throw new org.springframework.security.access.AccessDeniedException(
+                                        "No tienes permisos para modificar este foro");
+                }
+        }
+
+        private boolean isAdmin(Authentication authentication) {
+                return authentication.getAuthorities().stream()
+                                .map(GrantedAuthority::getAuthority)
+                                .anyMatch(authority -> authority.equals("ROLE_ADMIN"));
+        }
+
+        private boolean isModerator(Authentication authentication) {
+                return authentication.getAuthorities().stream()
+                                .map(GrantedAuthority::getAuthority)
+                                .anyMatch(authority -> authority.equals("ROLE_MODERATOR"));
+        }
+
+        private List<String> sanitizeTagNames(List<String> tags) {
+                if (tags == null) {
+                        return Collections.emptyList();
+                }
+
+                return tags.stream()
+                                .map(HtmlSanitizer::stripAllTags)
+                                .map(String::trim)
+                                .filter(tag -> !tag.isEmpty())
+                                .collect(Collectors.toList());
         }
 }
